# rust-grpc-server-example

./: .env  .gitignore  Cargo.toml  README.md  build.rs  docker-compose.yml  main.yml
.cargo-husky/hooks/: pre-commit  pre-push
.dependabot/: config.yml
.github/: dependabot.yml
.github/workflows/: ci.yml
migrations/2020-04-26-134227_add_greetings_table/: up.sql
proto/: greet.proto
src/: component.rs  controller.rs  domain.rs  gateway.rs  main.rs  schema.rs  service.rs  stage.rs  usecase.rs
src/component/: with_logging.rs  with_perf.rs
src/controller/: greet.rs
src/domain/: model.rs  repository.rs
src/domain/model/: datetime.rs  greet.rs  greeting.rs  id.rs  message.rs  name.rs
src/gateway/: save_greeting.rs
src/infrastructure/: db.rs  grpc.rs
src/service/: decorator.rs  greet_service.rs  query_error.rs
src/service/greet_service/: controller.rs  gateway.rs  repository.rs  usecase.rs
src/service/greet_service/model/: name.rs
src/usecase/: greet.rs
tests/: foo.rs  say_hello.rs
