[package]
name = "rust-grpc-server-example"
version = "0.1.0"
authors = ["tmtmtoo <tmtmt2209@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.2"
prost = "0.6"
tokio = { version = "0.2", features = ["full"] }
diesel = { version = "1.4.4", features = ["postgres", "chrono", "r2d2", "uuidv07"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.8"
uuid = { version = "0.8.1", features = ["v4"] }
chrono = "0.4.11"
log = "0.4.8"
env_logger = "0.7.1"
anyhow = "1.0.31"
thiserror = "1.0.17"
derive-new = "0.5.8"
async-trait = "0.1.31"
boolinator = "2.4.0"
derive_more = "0.99.5"
envconfig = "0.8.0"
envconfig_derive = "0.8.0"

[dev-dependencies]
dotenv = "0.15.0"

[dev-dependencies.cargo-husky]
version = "1.4.0"
default-features = false
features = ["user-hooks"]

[build-dependencies]
tonic-build = "0.2"
